remc/antlr_output/languageParser.py
# Generated from language.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class languageParser ( Parser ):

    grammarFileName = "language.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'extern'", "';'", "'('", "')'", "'&'", 
                     "'{'", "'}'", "'return'", "','", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'...'", "'+'", 
                     "'-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "IDENTIFIER", "NUMBER", 
                      "STRING", "COMMENTS", "WS", "ELIPSIS", "PLUS", "MINUS" ]

    RULE_entry_point = 0
    RULE_extern_declaration = 1
    RULE_function_prototype = 2
    RULE_function_declaration = 3
    RULE_kind = 4
    RULE_normal_type = 5
    RULE_pointer_type = 6
    RULE_block = 7
    RULE_statement = 8
    RULE_expression = 9
    RULE_function_call = 10
    RULE_factor = 11
    RULE_non_expression = 12
    RULE_return_statement = 13
    RULE_parameters = 14
    RULE_parameter = 15
    RULE_arguments = 16

    ruleNames =  [ "entry_point", "extern_declaration", "function_prototype", 
                   "function_declaration", "kind", "normal_type", "pointer_type", 
                   "block", "statement", "expression", "function_call", 
                   "factor", "non_expression", "return_statement", "parameters", 
                   "parameter", "arguments" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    IDENTIFIER=10
    NUMBER=11
    STRING=12
    COMMENTS=13
    WS=14
    ELIPSIS=15
    PLUS=16
    MINUS=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Entry_pointContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(languageParser.Function_declarationContext)
            else:
                return self.getTypedRuleContext(languageParser.Function_declarationContext,i)


        def extern_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(languageParser.Extern_declarationContext)
            else:
                return self.getTypedRuleContext(languageParser.Extern_declarationContext,i)


        def getRuleIndex(self):
            return languageParser.RULE_entry_point

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntry_point" ):
                listener.enterEntry_point(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntry_point" ):
                listener.exitEntry_point(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntry_point" ):
                return visitor.visitEntry_point(self)
            else:
                return visitor.visitChildren(self)




    def entry_point(self):

        localctx = languageParser.Entry_pointContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_entry_point)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==languageParser.T__0 or _la==languageParser.IDENTIFIER:
                self.state = 36
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [languageParser.IDENTIFIER]:
                    self.state = 34
                    self.function_declaration()
                    pass
                elif token in [languageParser.T__0]:
                    self.state = 35
                    self.extern_declaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Extern_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_prototype(self):
            return self.getTypedRuleContext(languageParser.Function_prototypeContext,0)


        def getRuleIndex(self):
            return languageParser.RULE_extern_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExtern_declaration" ):
                listener.enterExtern_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExtern_declaration" ):
                listener.exitExtern_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExtern_declaration" ):
                return visitor.visitExtern_declaration(self)
            else:
                return visitor.visitChildren(self)




    def extern_declaration(self):

        localctx = languageParser.Extern_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_extern_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(languageParser.T__0)

            self.state = 42
            self.function_prototype()
            self.state = 43
            self.match(languageParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_prototypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def kind(self):
            return self.getTypedRuleContext(languageParser.KindContext,0)


        def IDENTIFIER(self):
            return self.getToken(languageParser.IDENTIFIER, 0)

        def parameters(self):
            return self.getTypedRuleContext(languageParser.ParametersContext,0)


        def getRuleIndex(self):
            return languageParser.RULE_function_prototype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_prototype" ):
                listener.enterFunction_prototype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_prototype" ):
                listener.exitFunction_prototype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_prototype" ):
                return visitor.visitFunction_prototype(self)
            else:
                return visitor.visitChildren(self)




    def function_prototype(self):

        localctx = languageParser.Function_prototypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function_prototype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.kind()
            self.state = 46
            self.match(languageParser.IDENTIFIER)
            self.state = 47
            self.match(languageParser.T__2)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==languageParser.IDENTIFIER:
                self.state = 48
                self.parameters()


            self.state = 51
            self.match(languageParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_prototype(self):
            return self.getTypedRuleContext(languageParser.Function_prototypeContext,0)


        def block(self):
            return self.getTypedRuleContext(languageParser.BlockContext,0)


        def getRuleIndex(self):
            return languageParser.RULE_function_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_declaration" ):
                listener.enterFunction_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_declaration" ):
                listener.exitFunction_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declaration" ):
                return visitor.visitFunction_declaration(self)
            else:
                return visitor.visitChildren(self)




    def function_declaration(self):

        localctx = languageParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.function_prototype()
            self.state = 54
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KindContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def normal_type(self):
            return self.getTypedRuleContext(languageParser.Normal_typeContext,0)


        def pointer_type(self):
            return self.getTypedRuleContext(languageParser.Pointer_typeContext,0)


        def getRuleIndex(self):
            return languageParser.RULE_kind

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKind" ):
                listener.enterKind(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKind" ):
                listener.exitKind(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKind" ):
                return visitor.visitKind(self)
            else:
                return visitor.visitChildren(self)




    def kind(self):

        localctx = languageParser.KindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_kind)
        try:
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.normal_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.pointer_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Normal_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(languageParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return languageParser.RULE_normal_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNormal_type" ):
                listener.enterNormal_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNormal_type" ):
                listener.exitNormal_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNormal_type" ):
                return visitor.visitNormal_type(self)
            else:
                return visitor.visitChildren(self)




    def normal_type(self):

        localctx = languageParser.Normal_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_normal_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(languageParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pointer_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(languageParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return languageParser.RULE_pointer_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPointer_type" ):
                listener.enterPointer_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPointer_type" ):
                listener.exitPointer_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPointer_type" ):
                return visitor.visitPointer_type(self)
            else:
                return visitor.visitChildren(self)




    def pointer_type(self):

        localctx = languageParser.Pointer_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_pointer_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(languageParser.IDENTIFIER)
            self.state = 63
            self.match(languageParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(languageParser.StatementContext)
            else:
                return self.getTypedRuleContext(languageParser.StatementContext,i)


        def getRuleIndex(self):
            return languageParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = languageParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(languageParser.T__5)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << languageParser.T__7) | (1 << languageParser.IDENTIFIER) | (1 << languageParser.NUMBER) | (1 << languageParser.STRING))) != 0):
                self.state = 66
                self.statement()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self.match(languageParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def non_expression(self):
            return self.getTypedRuleContext(languageParser.Non_expressionContext,0)


        def expression(self):
            return self.getTypedRuleContext(languageParser.ExpressionContext,0)


        def getRuleIndex(self):
            return languageParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = languageParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [languageParser.T__7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.non_expression()
                pass
            elif token in [languageParser.IDENTIFIER, languageParser.NUMBER, languageParser.STRING]:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.expression(0)
                self.state = 76
                self.match(languageParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_call(self):
            return self.getTypedRuleContext(languageParser.Function_callContext,0)


        def factor(self):
            return self.getTypedRuleContext(languageParser.FactorContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(languageParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(languageParser.ExpressionContext,i)


        def PLUS(self):
            return self.getToken(languageParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(languageParser.MINUS, 0)

        def getRuleIndex(self):
            return languageParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = languageParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 81
                self.function_call()
                pass

            elif la_ == 2:
                self.state = 82
                self.factor()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 90
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = languageParser.ExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                    self.state = 85
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 86
                    _la = self._input.LA(1)
                    if not(_la==languageParser.PLUS or _la==languageParser.MINUS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 87
                    self.expression(4) 
                self.state = 92
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Function_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(languageParser.IDENTIFIER, 0)

        def arguments(self):
            return self.getTypedRuleContext(languageParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return languageParser.RULE_function_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_call" ):
                listener.enterFunction_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_call" ):
                listener.exitFunction_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_call" ):
                return visitor.visitFunction_call(self)
            else:
                return visitor.visitChildren(self)




    def function_call(self):

        localctx = languageParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_function_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(languageParser.IDENTIFIER)
            self.state = 94
            self.match(languageParser.T__2)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << languageParser.IDENTIFIER) | (1 << languageParser.NUMBER) | (1 << languageParser.STRING))) != 0):
                self.state = 95
                self.arguments()


            self.state = 98
            self.match(languageParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(languageParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(languageParser.NUMBER, 0)

        def IDENTIFIER(self):
            return self.getToken(languageParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return languageParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = languageParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_factor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << languageParser.IDENTIFIER) | (1 << languageParser.NUMBER) | (1 << languageParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Non_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def return_statement(self):
            return self.getTypedRuleContext(languageParser.Return_statementContext,0)


        def getRuleIndex(self):
            return languageParser.RULE_non_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNon_expression" ):
                listener.enterNon_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNon_expression" ):
                listener.exitNon_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNon_expression" ):
                return visitor.visitNon_expression(self)
            else:
                return visitor.visitChildren(self)




    def non_expression(self):

        localctx = languageParser.Non_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_non_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.return_statement()
            self.state = 103
            self.match(languageParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(languageParser.ExpressionContext,0)


        def getRuleIndex(self):
            return languageParser.RULE_return_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_statement" ):
                listener.enterReturn_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_statement" ):
                listener.exitReturn_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_statement" ):
                return visitor.visitReturn_statement(self)
            else:
                return visitor.visitChildren(self)




    def return_statement(self):

        localctx = languageParser.Return_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_return_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(languageParser.T__7)
            self.state = 106
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(languageParser.ParameterContext)
            else:
                return self.getTypedRuleContext(languageParser.ParameterContext,i)


        def ELIPSIS(self):
            return self.getToken(languageParser.ELIPSIS, 0)

        def getRuleIndex(self):
            return languageParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = languageParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.parameter()
            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 109
                    self.match(languageParser.T__8)
                    self.state = 110
                    self.parameter() 
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==languageParser.T__8:
                self.state = 116
                self.match(languageParser.T__8)
                self.state = 117
                self.match(languageParser.ELIPSIS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def kind(self):
            return self.getTypedRuleContext(languageParser.KindContext,0)


        def IDENTIFIER(self):
            return self.getToken(languageParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return languageParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = languageParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.kind()
            self.state = 121
            self.match(languageParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(languageParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(languageParser.ExpressionContext,i)


        def getRuleIndex(self):
            return languageParser.RULE_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments" ):
                listener.enterArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments" ):
                listener.exitArguments(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArguments" ):
                return visitor.visitArguments(self)
            else:
                return visitor.visitChildren(self)




    def arguments(self):

        localctx = languageParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.expression(0)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==languageParser.T__8:
                self.state = 124
                self.match(languageParser.T__8)
                self.state = 125
                self.expression(0)
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[9] = self.expression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expression_sempred(self, localctx:ExpressionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 3)
         




